--- a/src/Layout/Navbar/Navbar.css
+++ b/src/Layout/Navbar/Navbar.css
@@ -5,15 +5,21 @@
     transform: translateX(-50%);
     width: 100vw;
     height: 7rem;
-    /* border: 2px solid red; */
     display: flex;
     align-items: center;
-    /* padding: 0 0 0 2rem; */
+    padding: 0 1rem;
     max-width: 1024px;
     margin: auto;
     justify-content: space-between;
     background-color: white;
     z-index: 10;
+    column-gap: 1rem;
+}
+.nav-head{
+    font-size: 2.5rem;
+    font-weight: 700;
+    text-decoration: none;
+    color: #0e121a;
 }
 .nav > input{
     height: 50px;
@@ -34,6 +40,13 @@ input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
+.profile-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    flex-wrap: wrap;
+}
 .profile{
     display: flex;
     column-gap: 0.5rem;
@@ -52,4 +65,26 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     padding: 1rem;
     border: 2px solid #0e121a;
     border-radius: 50%;
+}
+.profile-logout{
+    height: 50px;
+    border-radius: 50px;
+    color: #0e121a;
+    border: 2px solid #0e121a;
+    background-color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 2rem;
+    text-transform: capitalize;
+}
+
+@media screen and (max-width: 1024px){
+    .nav{
+        max-width: 768px;
+    }
+    .nav > input{
+        display: none;
+    }
 }
