--- a/src/Pages/AddNewNote/AddNewNote.css
+++ b/src/Pages/AddNewNote/AddNewNote.css
@@ -2,6 +2,7 @@
     width: 100%;
     max-width: 1024px;
     margin: auto;
+    padding: 0 1rem;
 }
 .note-form{
     margin-top: 9em;
@@ -23,4 +24,10 @@
     height: 300px;
     margin-bottom: 2rem;
     padding: 1rem;
+}
+
+@media screen and (max-width: 1024px){
+    .add-new-note{
+        max-width: 768px;
+    }
 }
