--- a/src/Pages/LoginPage/LoginPage.css
+++ b/src/Pages/LoginPage/LoginPage.css
@@ -2,6 +2,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    /* flex-wrap: wrap; */
 }
 .png-section, .form-section{
     flex-basis: 50%;
@@ -25,6 +26,7 @@
     justify-content: center;
     flex-direction: column;
     row-gap: 60px;
+    padding: 0 1rem;
 }
 .form-section-details{
     max-width: 447px;
@@ -38,6 +40,7 @@
     max-width: 447px;
     width: 100%;
     display: flex;
+    
     flex-direction: column;
 }
 .form > input{
@@ -92,4 +95,13 @@
 }
 .sign-up-link{
     color: #0e121a;
+}
+
+@media screen and (max-width: 900px){
+    .login-page .png-section{
+        display: none;
+    }
+    .login-page .form-section{
+        flex-basis: 100%;
+    }
 }
